# slay-the-spire-simulator-qt6

./: .clang-format  .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/component/: attack.h  card_effects.h  effect.h  strength.h
core/data/card/: strike_r.json
core/event/: attack.h  play_card_event.h
core/game/card/: card.h  card_database.h  card_factory.h
core/game/character/: character_factory.h
core/include/: pch.h
core/include/component/: block.h  effect.h  health.h  pile.h  vulnerable.h
core/include/core/: public_api.h
core/include/event/: attack.h  battle.h  battle_event.h  deal_damage_event.h  draw_card_event.h  health_change_event.h  play_card_event.h  turn.h  turn_event.h
core/include/game/: battle_manager.h  turn_manager.h
core/include/game/card/: card_database.h  card_factory.h
core/include/game/character/: character_factory.h
core/include/handler/: apply_vulnerable_handler.h  deal_damage_handler.h  draw_card_handler.h  effect_handler.h  end_battle_handler.h  event_handler.h  gain_block_handler.h  gain_strength_handler.h  handler_registry.h  play_card_handler.h
core/include/manager/: battle_manager.h  card_manager.h  efffect_manager.h  turn_manager.h
core/include/registry/: effect_registry.h
core/include/system/: end_turn_system.h  log_system.h  play_card_system.h
core/src/game/: battle_manager.cpp  turn_manager.cpp
core/src/handler/: apply_vulnerable_handler.cpp  deal_damage_handler.cpp  draw_card_handler.cpp  effect_handler.cpp  end_battle_handler.cpp  event_handler.cpp  gain_block_handler.cpp  gain_strength_handler.cpp  handler_registry.cpp  play_card_handler.cpp
core/src/manager/: battle_manager.cpp  card_manager.cpp  efffect_manager.cpp  turn_manager.cpp
core/src/system/: log_system.cpp  play_card_system.cpp
core/system/: end_turn_system.h  health_system.cpp  health_system.h  play_card_system.cpp  play_card_system.h
core/system/handler/: apply_vulnerable_handler.h  deal_damage_handler.h  effect_handler.h  gain_block_handler.h  gain_strength_handler.h
core/system/registry/: effect_registry.h
core/util/: logging.h
gui/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
test/include/: pch.h
test/unit/: play_card.cpp  play_card_system.cpp
test/unit/card/: bash.cpp  gain_block.cpp  shrug_it_off.cpp
test/unit/handler/: deal_damage_handler_test.cpp  end_battle_handler_test.cpp
test/unit/system/: log_system_test.cpp
tests/: CMakeLists.txt  main.cpp
tui/: CMakeLists.txt  main.cpp
ui/: CMakeLists.txt
